--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -11,7 +11,11 @@
     android:background="@color/background"
     tools:context=".Dashboard">
 
-    <include layout="@layout/fragment_dboard"/>
+    <include
+        android:layout_marginTop="50dp"
+        layout="@layout/fragment_dboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,9 +43,10 @@
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
         android:layout_gravity="start"
+        android:background="#182932"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/menu"
-        app:itemIconTint="@color/lavender"
-        app:itemTextColor="@color/lavender"/>
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
