--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -39,20 +39,12 @@
                     tools:ignore="MissingConstraints">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Address : "
-                        android:textColor="@color/black_heading"
-                        android:textSize="20sp"
-                        />
+                        style="@style/txt_heading_pro_detail"
+                        android:text="Address : "/>
 
                     <TextView
-                        android:id="@+id/txt_add"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1807 Holden Street San Diego, CA"
-                        android:textColor="@color/blue"
-                        android:textSize="25sp" />
+                        style="@style/txt_ans_pro_detail"
+                        android:text="1807 Holden Street San Diego, CA"/>
 
                 </LinearLayout>
 
@@ -68,20 +60,12 @@
                     tools:ignore="MissingConstraints">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:text="City : "
-                        android:textColor="@color/black_heading"
-                        android:textSize="25sp" />
+                        style="@style/txt_heading_pro_detail"
+                        android:text="City : "/>
 
                     <TextView
-                        android:id="@+id/txt_ct"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Mumbai"
-                        android:textColor="@color/blue"
-                        android:textSize="25sp" />
+                        style="@style/txt_ans_pro_detail"
+                        android:text="Mumbai"/>
 
                 </LinearLayout>
 
@@ -97,20 +81,12 @@
                     tools:ignore="MissingConstraints">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:text="State : "
-                        android:textColor="@color/black_heading"
-                        android:textSize="25sp" />
+                        style="@style/txt_heading_pro_detail"
+                        android:text="State : "/>
 
                     <TextView
-                        android:id="@+id/txt_st"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Maharashtra"
-                        android:textColor="@color/blue"
-                        android:textSize="25sp" />
+                        style="@style/txt_ans_pro_detail"
+                        android:text="Maharashtra"/>
 
                 </LinearLayout>
 
@@ -126,20 +102,12 @@
                     tools:ignore="MissingConstraints">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:text="Country : "
-                        android:textColor="@color/black_heading"
-                        android:textSize="25sp" />
+                        style="@style/txt_heading_pro_detail"
+                        android:text="Country : "/>
 
                     <TextView
-                        android:id="@+id/txt_con"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="India"
-                        android:textColor="@color/blue"
-                        android:textSize="25sp" />
+                        style="@style/txt_ans_pro_detail"
+                        android:text="India"/>
 
                 </LinearLayout>
 
@@ -155,20 +123,12 @@
                     tools:ignore="MissingConstraints">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:text="Pin Code : "
-                        android:textColor="@color/black_heading"
-                        android:textSize="25sp" />
+                        style="@style/txt_heading_pro_detail"
+                        android:text="Pin Code : "/>
 
                     <TextView
-                        android:id="@+id/txt_bc"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="310004"
-                        android:textColor="@color/blue"
-                        android:textSize="25sp" />
+                        style="@style/txt_ans_pro_detail"
+                        android:text="310004"/>
 
                 </LinearLayout>
 
@@ -184,20 +144,12 @@
                     tools:ignore="MissingConstraints">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:text="Emergency no : "
-                        android:textColor="@color/black_heading"
-                        android:textSize="25sp" />
+                        style="@style/txt_heading_pro_detail"
+                        android:text="Emergency no : "/>
 
                     <TextView
-                        android:id="@+id/txt_brnm"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="+91 9988446655"
-                        android:textColor="@color/blue"
-                        android:textSize="25sp" />
+                        style="@style/txt_ans_pro_detail"
+                        android:text="+91 9988446655"/>
 
                 </LinearLayout>
 
