--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="txt_heading_pro_detail">
+        <item name="android:layout_marginTop">13dp</item>
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/black_heading</item>
         <item name="android:fontFamily">@font/font_txt_heading</item>
@@ -16,26 +17,26 @@
     </style>
 
     <style name="txt_tbl_heading">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:textColor">@color/black_heading</item>
         <item name="android:fontFamily">@font/font_txt_heading</item>
         <item name="android:gravity">center</item>
-        <item name="android:padding">10sp</item>
+        <item name="android:padding">8sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="txt_tbl_ans">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:textColor">#757575</item>
         <item name="android:gravity">center</item>
-        <item name="android:padding">10sp</item>
+        <item name="android:padding">8sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="edit_text">
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">18dp</item>
         <item name="android:textColor">@color/blue</item>
         <item name="android:gravity">start</item>
         <item name="android:padding">10sp</item>
